@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-12-20 Kimmo
+ BUG: [ 1606583 ] VC6 build is broken
+  Backout of patch [ 1603769 ] Send MergeCmdLineInfo between instances
+  Src: MainFrm.cpp Merge.cpp MergeCmdLineInfo.cpp MergeCmdLineInfo.h
+
 2006-12-19 Kimmo
  PATCH: [ 1618358 ] Fix warning about non-standard extension with enum
   Src: MainFrm.cpp
